--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Header -->
 
-
+<h2>i am trying to change the code</h2>
   <header>
        <h1 id="hi">"Personal Dashboard"</h1>
        <button onclick="changeName()">Change Your Name</button>
@@ -22,7 +22,7 @@
        <a href="">Contact Us</a>
        <a href="">About Me</a>
   </nav>
-  <h2>saliman</h2>
+  
 
   
 
