--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
   <!-- Header -->
+   <p> i am trying to change the code and push to the github let try</p>
 
 <h2>i am trying to change the code</h2>
   <header>
